adjust TonCenter v2 to API 2.1.1